rename admin app from admin console to settings
Former-commit-id: e2b71d807984de07289b3f4148be74f2ce6c8fc9 [formerly 06d2a35fd9b81d189124e560e7d9d834ff2e27c8] [formerly 46b724c349c10bba7b878fe6ec590d0d16f79f93 [formerly 3d984027de7b479f6132d2c0575765e09d67aa4f]]
Former-commit-id: b0bc3f6f325cb186673bcbc462a5ce9a1b32d12a [formerly 1ad66930f59e228b7cd5de4bd4fa1d8036afaf6b]
Former-commit-id: ecf6de41f190daf5de5fda7e006b4778de4df271

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,7 +49,7 @@
                   </ul>
                </div>
                {%for application in apps %}
-                 {%if application.label =="Admin Console" %}
+                 {%if application.label =="Settings" %}
                   <a  href="/apps/{{ application.key.id() }}" class="headerBtn hide_sm" title="Settings" style="margin-left: 20px; margin-right: 12px;" > 
                       <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
                   </a>
@@ -66,7 +66,7 @@
                         </a>
                     </li> 
                     {%for application in apps %}
-                       {%if application.label =="Admin Console" %}
+                       {%if application.label =="Settings" %}
                         <li>
                         <a  href="/apps/{{ application.key.id() }}" class="" title="Settings" > 
                             <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
