--- a/templates/ioadmin.html
+++ b/templates/ioadmin.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
 
     <link href="/static/bootstrap3/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <title>ioGrow Admin Console</title>
+    <title>ioGrow Settings</title>
     <style>
       .profile-photo {
         margin-top: 10px;
