--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -69,7 +69,7 @@
 
                     <div style=" padding-left: 10px;" class="pull-right">
                         {% for application in apps %}
-                        {% if application.label =="Admin Console" %}
+                        {% if application.label =="Settings" %}
                         <a href="/apps/{{ application.key.id() }}" class="headerBtn hide_sm" title="Settings"
                            style="margin-left: 20px; margin-right: 12px;">
                             <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
@@ -83,7 +83,7 @@
                             </a>
                             <ul class="dropdown-menu drp-dwn-right">
                                 {% for application in apps %}
-                                {% if application.label =="Admin Console" %}
+                                {% if application.label =="Settings" %}
                                 <li>
                                     <a href="/apps/{{ application.key.id() }}" class="" title="Settings">
                                         <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
