--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -56,7 +56,7 @@
       <div class="col-md-3">
             <div style=" padding-left: 10px;" class="pull-right">
                {%for application in apps %}
-                 {%if application.label =="Admin Console" %}
+                 {%if application.label =="Settings" %}
                   <a  href="/apps/{{ application.key.id() }}" class="headerBtn hide_sm" title="Settings" style="margin-left: 20px; margin-right: 12px;" > 
                       <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
                   </a>
@@ -68,7 +68,7 @@
                   </a>
                   <ul class="dropdown-menu drp-dwn-right">
                     {%for application in apps %}
-                       {%if application.label =="Admin Console" %}
+                       {%if application.label =="Settings" %}
                         <li>
                         <a  href="/apps/{{ application.key.id() }}" class="" title="Settings" > 
                             <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
