Custom logo bug fixes #2362
Former-commit-id: c66db4cdb451fe07c15ad169a841bd6db53242f1 [formerly c0015fd1e8877208f67edd3e744ae7da2ed6eea9] [formerly 4ba3911e6051edb98b1cf0a02e5b96a6260c9480 [formerly 24d1dfc9ca19b6677604c6389bf84143a1687330]]
Former-commit-id: 457df5665a0994730272d26920d702eb39765073 [formerly f27be4e5e14b31b6ab8175ed3686a11c43e8725a]
Former-commit-id: 8f1b479f20b212b27348147059dd75de5139b318

--- a/templates/admin/company/company_edit.html
+++ b/templates/admin/company/company_edit.html
@@ -127,24 +127,24 @@
                         <div class="form-group">
                             <div class="radio-list">
                                 <label>
-                                    <input type="radio" value="default" ng-model="logo.type">
+                                    <input type="radio" value="default" ng-model="logo.type"
+                                           ng-click="deleteCustomLogo()">
                                     {{ _('Default Logo') }}
                                 </label>
                                 <img src="/static/build/img/iogrow-logo-app.png" alt="logo"
                                      style="border:solid #E2E2D7 1px;    margin-left: 75px;margin-bottom: 15px;"/>
                                 <label>
-                                    <input type="radio" value="custom" ng-model="logo.type">
+                                    <input type="radio" value="custom" ng-model="logo.type" ng-click="createPickerUploader()">
                                     {{ _('Custom Logo') }}
                                 </label>
 
                                 <div ng-click="logo.type='custom'; createPickerUploader();">
-                                    {% if logo != None %}
-                                    <img src="{{ logo.fileUrl }}" alt="logo" height="34px"
-                                         style="border:solid #E2E2D7 1px;margin-left: 75px;"/>
-                                    {% else %}
-                                    <span style="border:solid #E2E2D7 1px;margin-left: 75px;padding: 7px;">
+
+                                    <img  ng-src="<%= fileUrl %>"  alt="logo" height="34px"
+                                         style="border:solid #E2E2D7 1px;margin-left: 75px;" ng-show="fileUrl"/>
+                                    <span style="border:solid #E2E2D7 1px;margin-left: 75px;padding: 7px;"
+                                          ng-hide="fileUrl">
                                         {{ _('Your logo here')}} ... </span>
-                                    {% endif %}
                                 </div>
                             </div>
                         </div>
