adding new tag to the top of tags fix #2345
Former-commit-id: f2db8247cd398902ec8e9a7d945144264e7fe57e [formerly bd2e8bb5ea65f247ce0c99192a87c1b09c9b266f] [formerly 6e8c837b443dc1d36b74b731c470d4457b0a6c46 [formerly d98ff446b10173255e3d917f1c06f5522f1bb796]]
Former-commit-id: 0277ca3810f65e6d37974aa78dd220eb792bd9b8 [formerly 1efc64f29b7328eba632a07d3fec7cacdffb6e51]
Former-commit-id: 62bfd2948724d3a19fd1a7c9e5d008df7c49994c

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -1217,9 +1217,7 @@
 </div>
 
 <script type="text/javascript">
- $('#slimtest1').slimScroll({
-                    height: '20px'
-  });
+ $('#slimtest1').slimScroll({ height: '194px'});
   $("#select2_sample2").select2({
         placeholder: "{{ _('Click to Select a label')}}",
         allowClear: false
