--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -1142,7 +1142,7 @@
 </div>
 <script type="text/javascript">
   $('#slimtest1').slimScroll({
-                    height: '20px'
+                    height: '200px'
   });
   $("#select2_sample2").select2({
         placeholder: "{{_('Click to Select a label')}}",
@@ -1181,7 +1181,7 @@
   $('.cardElement').css({'height':(cw/1.618)+'px'});
   console.log(cw);*/
   $('.textfill').textfill({debug: true, maxFontPixels: 16});
-  $('#slimList').slimScroll({});  console.log("ddddd");
+  $('#slimList').slimScroll({height: '193px'});
   /*$('.labelElement').click(function() {
           console.log("testedfslhkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk");
         }); */
