--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -1073,9 +1073,7 @@
         }
     }
     handleUniform();
-    $('.scrollList').slimScroll({
-         // height:'205px'
-        });
+    $('.scrollList').slimScroll({height:'193px'});
 $('.textfill').textfill({debug: true, maxFontPixels: 16});
 $('#slimList').slimScroll({});
 </script>
