--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -1290,5 +1290,6 @@
         autoresize: true
       });
  $('.textfill').textfill({debug: true, maxFontPixels: 16});
-  $('#slimList').slimScroll({});
+ $('#slimList').slimScroll({height: '193px'});
+  
 </script>
