email signature center
Former-commit-id: 586eb578f013c822ff29f48ac0d42d2ae890d328 [formerly 70fc28e5066eb190edaf7c8a106ca36aca92994a] [formerly df1654d4dd90fbf4730f53a8e089576fb4affa08 [formerly ced5f1ce4fd4ecee393ece02b52a871b268248dd]]
Former-commit-id: 5802342ce776fc4f37e12dcc132a91415bd94c3f [formerly fbed5fcd552245efc294677666e9ded96dacb973]
Former-commit-id: 797e8ddffc2344b551527986cf2d84f774e0eef3

--- a/templates/base.html
+++ b/templates/base.html
@@ -582,6 +582,7 @@ mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
 
 <script src="/static/build/js/async_scripts_2.js"></script>
 <script type="text/javascript" src="/static/build/js/sync_ctrls_sers_scripts.js"></script>
+<script type="text/javascript" src="/static/plugins/bootstrap-wysihtml5/wysihtml5-0.3.0.js"></script>
 <!--<script type="text/javascript" src="/static/build/js/async_ctrls_sers_scripts.js" ></script>-->
 
 <!--<script  type="text/javascript" src="/static/scripts.min.js" ></script>-->
