update copyLead to Salesforce stripe subscription
Former-commit-id: 0d9f06be6d1d251dfe6e1c4b97212d7659a50749 [formerly 342a7c3f3205ad6af09bf0d49d610e532ea20ebc] [formerly 52f1b8191f492d8fd6ec33199f467619d6499324 [formerly 15746c5dd632772c365ebe362057616602e32123]]
Former-commit-id: d0562777547132548d6dc7beb710d239d2c27960 [formerly 444d831f86bb0f3d32d6275b3f43063a668ed547]
Former-commit-id: 4d9a30a3352674e03a4158a8739df9fe106e5008

--- a/templates/salesforce_callback.html
+++ b/templates/salesforce_callback.html
@@ -10,7 +10,7 @@
       var OAuthHelper = {};
       var handler = StripeCheckout.configure({
       key: 'pk_live_4Xa3cFwLO3vTgdjpjnC6gmAD',
-      image: 'https://storage.googleapis.com/iogrow-gs/Logo-iogrow.png',
+      image: 'https://storage.googleapis.com/iogrow-gs/128.png',
       token: function(token) {
         // Use the token to create the charge with a server-side script.
         // You can access the token ID with `token.id`
@@ -69,8 +69,8 @@
                 if(oauthResult.show_checkout=="true"){
                     handler.open({
                     name: 'ioGrow LLC',
-                    description: 'LinkedIn to Salesforce extension.',
-                    amount: 1500,
+                    description: 'Copylead to Salesforce',
+                    amount: 1000,
                     email:oauthResult.user_email
                   });
                 }else{
